tests/cases/parser/patterns/awkward_pat_lit.hash
// stage=parse, run=fail


main := () => {
    match k {
        // ~ERROR: should write literal as `-2`
        - 2 => { 1 },
        _ => {  0 }
    };
}
